@@ -9,9 +9,6 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.test.web.servlet.MockMvc;
 
 import java.util.List;
 
@@ -44,7 +41,7 @@ public class ProductServiceTest {
 
         List<ProductVO> result = productService.getAllProducts();
         assertNotNull(result);
-        assertEquals("Test Product", result.get(0).getName());
+        assertEquals("Test Product", result.getFirst().getName());
     }
 
     @Test
